# ugpy

./: .gitignore  LICENSE.md  README.md  setup.cfg
manual/: MakeCsvForGUI.ipynb  NapariSegmentation.ipynb  gui_utils.py
notebooks/: NC_Control_Process_04132022_CNN.ipynb  TestingGui.ipynb
tests/: test_datasets.py  test_features.py
tests/classification/: test_datasets.py
tests/localization/: test_datasets.py
tests/utils/: test_data.py  test_features.py
ugpy/: analysis.py  classifier.py  data.py  datasets.py  features.py  loader.py  models.py  predict.py  predict_config.yaml  preprocess.py  prob_map.py  prob_map_config.yaml  prob_map_config_crop.yaml  prob_map_datset_only.py  splitter.py  synapse_classifier.py  train.py  train_config.yaml
ugpy/classification/: augmentation.py  datasets.py  models.py  predict.py  prob_map.py  train.py
ugpy/configs/: predict_config.yaml  prob_map_config.yaml  prob_map_config_crop.yaml  train_config.yaml  train_config_TwoSlice.yaml
ugpy/localization/: datasets.py  detector.py
ugpy/synspy/analyze/: block.py  util.py
ugpy/utils/: analysis.py  data.py  features.py  loader.py  loggers.py  splitter.py
ugpy/viewer/: napari_utils.py  visualize.py
