[metadata]
name = ugpy
version = 0.0.1
author = Anna Nadtochiy
author_email = nadtochi@usc.edu
description = pythonic undergrad
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LemonJust/ugpy
classifiers =
      Development Status :: 2 - Pre-Alpha
      Intended Audience :: Science/Research
      Topic :: Scientific/Engineering :: Image Processing
      Programming Language :: Python :: 3
      License :: OSI Approved :: MIT License
      Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.7
install_requires =
  tifffile
  numpy
  tqdm
include_package_data = True
